--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
     </div>
   </div>
   <div class="video-item">
-    <img src="video2.jpg" alt="Video 2 Thumbnail">
+    <img src="sur.mp4" alt="Video 2 Thumbnail" class="vi-mp4">
     <div class="video-info">
       <h3>Video 2 Title</h3>
       <span>March 27, 2024</span>
     </div>
   </div>
   <div class="video-item">
-    <img src="video3.jpg" alt="Video 3 Thumbnail">
+    <img src="video3.jpg" alt="Video 3 Thumbnail" class="vi1-mp4">
     <div class="video-info">
       <h3>Video 3 Title</h3>
       <span>March 27, 2024</span>
@@ -108,6 +108,62 @@
 </div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="video-container">
+  <div class="video-item">
+    <video width="380" height="190" controls>
+    <source src="sur.mp4" class="suur-im">
+    </video>
+    <div class="vi-in">
+      <img src="zuu.jpg" class="img-zuu">&nbsp;&nbsp;
+      <div class="he">Surah Yasin (Yaseen)  Relaxing heart touching voice  Zikrullah TV</div>
+<div class="twoo">
+      <div class="za">Zikrullah&nbsp;TV</div>
+      
+</div>
+    </div>
+    </div>
+  <div class="video-item-1">
+    <video width="380" height="190" controls>
+      <source src="sur.mp4" class="suur-im">
+      </video>
+      <div class="vi-inn">
+        <img src="zuu.jpg" class="img-zuu">&nbsp;&nbsp;
+        <div class="he">Surah Yasin (Yaseen)  Relaxing heart touching voice  Zikrullah TV</div>
+<div class="twoo">
+        <div class="za">Zikrullah&nbsp;TV</div>  
+</div>
+  </div>
+  </div>
+  <div class="video-item-2">
+    <video width="380" height="190" controls>
+    <source src="sur.mp4" class="suur-im">
+    </video>
+    <div class="vi-innn">
+      <img src="zuu.jpg" class="img-zuu">&nbsp;&nbsp;
+      <div class="he">Surah Yasin (Yaseen)  Relaxing heart touching voice  Zikrullah TV</div>
+<div class="twoo">
+      <div class="za">Zikrullah&nbsp;TV</div>  
+</div>
+</div>
+</div>
    
 
 
