--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
 
-
+<div class="gih">
 <div class="button-container">
   <button>All</button>
   <button>Music</button>
@@ -82,26 +82,6 @@
 <button>Mawlana</button>
 <button>Recently uploaded</button>
 </div>
-  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="video-container">
   <div class="video-item">
     <video width="380" height="190" controls>
@@ -116,6 +96,7 @@
 </div>
     </div>
     </div>
+    &nbsp;&nbsp;&nbsp;&nbsp;
   <div class="video-item-1">
     <video width="380" height="190" controls>
       <source src="sur.mp4" class="suur-im">
@@ -128,6 +109,7 @@
 </div>
   </div>
   </div>
+  &nbsp;&nbsp;&nbsp;&nbsp;
   <div class="video-item-2">
     <video width="380" height="190" controls>
     <source src="sur.mp4" class="suur-im">
@@ -139,9 +121,68 @@
       <div class="za">Zikrullah&nbsp;TV</div>  
 </div>
 </div>
-</div>
    </div>
+   <div class="video-container-3">
+    <div class="video-item-3">
+      <video width="380" height="190" controls>
+      <source src="sur.mp4" class="suur-im">
+      </video>
+      <div class="vi-in">
+        <img src="zuu.jpg" class="img-zuu">&nbsp;&nbsp;
+        <div class="he">Surah Yasin (Yaseen)  Relaxing heart touching voice  Zikrullah TV</div>
+  <div class="twoo">
+        <div class="za">Zikrullah&nbsp;TV</div>
+        
+  </div>
+      </div>
+      </div>
+&nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="video-item-4">
+      <video width="380" height="190" controls>
+        <source src="sur.mp4" class="suur-im">
+        </video>
+        <div class="vi-inn">
+          <img src="zuu.jpg" class="img-zuu">&nbsp;&nbsp;
+          <div class="he">Surah Yasin (Yaseen)  Relaxing heart touching voice  Zikrullah TV</div>
+  <div class="twoo">
+          <div class="za">Zikrullah&nbsp;TV</div>  
+  </div>
+    </div>
+    </div>
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <div class="video-item-5">
+      <video width="380" height="190" controls>
+      <source src="sur.mp4" class="suur-im">
+      </video>
+      <div class="vi-innn">
+        <img src="zuu.jpg" class="img-zuu">&nbsp;&nbsp;
+        <div class="he">Surah Yasin (Yaseen)  Relaxing heart touching voice  Zikrullah TV</div>
+  <div class="twoo">
+        <div class="za">Zikrullah&nbsp;TV</div>  
+  </div>
+  </div>
+     </div>
+    
    </div>
+
+   </div>
+
+   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
