--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 &nbsp;&nbsp;<i class="fa fa-microphone"></i>
 &nbsp;&nbsp;&nbsp;&nbsp;<div class="create-container">
 
-  <input type="file" accept="video/*" id="upload-video" style="display: none;">
+<input type="file" accept="video/*" id="upload-video" style="display: none;">
 </div>
 </div>
 
@@ -64,7 +64,7 @@
 </div>
 
 
-
+&nbsp;&nbsp;
 <div class="gih">
 <div class="button-container">
   <button>All</button>
