--- a/index.html
+++ b/index.html
@@ -51,14 +51,19 @@
 </div>
 <div class="cu">
   <div class="fo">
+    &nbsp;
   <i class="fa fa-home"></i>
 <div class="hho">Home</div>
+&nbsp;&nbsp;
   <img src="sho.jpg" class="image-shh">
   <div class="ssss">Shorts</div>
+  &nbsp;&nbsp;
   <img src="vc.jpg" class="img--vcc">
   <div class="vvc">Subscriptions</div>
+  &nbsp;&nbsp;
   <img src="you.jpg" class="img--youu">
   <div class="yoou">You</div>
+  &nbsp;&nbsp;
   <img src="hist.jpg" class="img--hist">
   <div class="hi">History</div>
 </div>
@@ -230,3 +235,36 @@
 <script src="main.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<button class="button button1">Green</button>
+  <button class="button button2">Blue</button>
+  <button class="button button3">Red</button>
+  <button class="button button4">Gray</button>
+  <button class="button button5">Black</button>
